Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117936

Polar axis support for Scatter3D does not work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • None
    • 6.7.0
    • Graphs: 3D
    • None
    • 3f250e68d (dev), d3bbae2ff (dev), 81cb582c4 (6.7), 97f88b8c5 (6.7)

      In tst_scattertest manual test, toggle on the Polar graph checkbox. Only the floor grid changes, nothing else does.

        For Gerrit Dashboard: QTBUG-117936
        # Subject Branch Project Status CR V

            oulu_hillbilly Sami Varanka
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes