Set scatter dataitem polar coordinates

Task-number: QTBUG-117936
Change-Id: I9ef3a2428835e238e48ddc634763adedf51d3584
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>